@@ -1,5 +1,10 @@
 2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>
 
+	* gnustep-config.in: Extended help to list all the new 
+	filesystem variables.
+
+2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>
+
 	* configure.ac (GNUSTEP_USER_DIR_LIBRARIES): Fixed definition.
 	Use GNUSTEP_SYSTEM_HEADERS and GNUSTEP_SYSTEM_LIBRARIES rather
 	than GNUSTEP_SYSTEM_ROOT/Library/Headers and
